[tool.poetry]
name = "poetry-constraints-txt-range-exclude"
version = "0.1.0"
description = "Probe: poetry project with range constraint (urllib3<2.0) in constraints.txt, applyConstraints=true (PRD-8924 / SCA-5467)"
authors = ["Mend QA <qa@mend.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.0"
# Pinned <2.0 so poetry.lock resolves urllib3 to the highest 1.x release,
# matching constraints.txt. Mirrors what `applyConstraints=true` is meant
# to do at scan time; encoding it here keeps the lockfile self-consistent.
urllib3 = "<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"